Closed Bug 630340 Opened 14 years ago Closed 14 years ago

Compartment assertion with undefined value

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: billm, Unassigned)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

At the end of DefinePropertyOnObject, we call CallJSPropertyOp with an out-parameter |dummy|. It does a compartment assertion on this value, which is undefined. Found with valgrind.
Attached patch fixSplinter Review
Attachment #508528 - Flags: review?(jwalden+bmo)
Attachment #508528 - Flags: review?(jwalden+bmo) → review+
cdleary-bot mozilla-central merge info: http://hg.mozilla.org/mozilla-central/rev/d3e265afe157 Note: not marking as fixed because fixed-in-tracemonkey is not present on the whiteboard.
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-tracemonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: