Bug 630340 - Fix undefined value in compartment assertion (r=Waldo)